# trabalho-final-alg1

./: CMakeLists.txt  README.md  fill_stock.h  forgv_debt.h  head.h  main.c  pay_debt.h  register_client.h  search_debt.h  search_stock.h  sim_purch.h
